fix footer spacing

--- a/client/web/src/components/fuzzyFinder/FuzzyModal.module.scss
+++ b/client/web/src/components/fuzzyFinder/FuzzyModal.module.scss
@@ -104,7 +104,7 @@
     display: flex;
     align-items: center;
     width: 100%;
-    padding: 0 1rem 0.75rem;
+    padding: 0 1.5rem 0.75rem 1rem;
 }
 
 .keyboard-explanation {
